--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.3",
+    "bcrypt": "^5.0.1",
     "jwt-decode": "^3.1.2"
   }
 }
