package.json name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dungeon Notes Dragons",
+  "name": "Dungeon-Notes-Dragons",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
