--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.6"
+    "mongoose": "^5.11.6",
+    "bcrypt": "^5.0.0"
+
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
