--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@apollo/client": "^3.3.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@testing-library/jest-dom": "^5.11.6",
