--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@testing-library/jest-dom": "^5.11.6",
