--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.19.0",
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.6",
-    "bcrypt": "^5.0.0"
-
+    "npmlog": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
